# rustwqb

./: .gitignore  Cargo.toml  alphas.db-shm  alphas.db-wal
note/: 命令.txt
src/: app_service.rs  app_state.rs  main.rs
src/ai/: cerebras.rs  mod.rs  openrouter.rs  types.rs  unified.rs  xirang.rs
src/backtest/: mod.rs  model.rs  service.rs  worker.rs
src/commands/: app_command.rs  backtest.rs  catch.rs  mod.rs
src/generate/: context.rs  field_sync.rs  mod.rs  parser.rs  prompt.rs  service.rs
src/session/: auto_auth_session.rs  dto.rs  mod.rs  urls.rs  wqb_session.rs
src/storage/: connection.rs  mod.rs
src/storage/entity/: alpha.rs  alpha_field_relation.rs  backtest_job.rs  data_field.rs  data_field_scope.rs  mod.rs  operator_event_compat.rs
src/storage/repository/: alpha_repo.rs  backtest_repo.rs  data_field_repo.rs  mod.rs  operator_compat_repo.rs
src/ui/: mod.rs
