[package]
name = "rustwqb"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
dotenv = "0.15"
sea-orm = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.12.2"
